--- a/package.json
+++ b/package.json
@@ -48,20 +48,21 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^16.0.0",
-    "@tarojs/mini-runner": "3.0.26",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.0.26",
     "@tarojs/webpack-runner": "3.0.26",
-    "babel-preset-taro": "3.0.26",
-    "eslint-config-taro": "3.0.26",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^2.x",
+    "@types/react": "^16.0.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.x",
+    "@typescript-eslint/parser": "^2.x",
+    "babel-preset-taro": "3.0.26",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.0.26",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "node-sass": "^5.0.0",
+    "stylelint": "9.3.0",
     "typescript": "^3.7.0"
   }
 }
